--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <li class="logo"><a href="index.html">VibLight Games</a></li>
                 <!-- <a href="#"><img id="logo"src="images/vglogo2.png" alt="Viblight Games Logo"/></a> -->
             </div> 
-            <nav>
+            <nav class="set">
                  
                 <button id="nav-toggle" class="hamburger-menu">
                     <span class="strip"></span>
